--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-01 02:58 -->
+<!-- 2022-10-02 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,46 +33,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org23d683f">1. 妙妙文章</a>
+<li><a href="#orgece9a2e">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgca47d3a">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org42ef642">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org2dc7d1d">1.3. 关于编辑器</a></li>
-<li><a href="#orgbe1765f">1.4. 关于代码</a></li>
-<li><a href="#org8102dd6">1.5. 关于CPU</a>
+<li><a href="#org9e514c6">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org54066c4">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org90432d1">1.3. 关于编辑器</a></li>
+<li><a href="#org13f8bc9">1.4. 关于代码</a></li>
+<li><a href="#org368a5c9">1.5. 关于CPU</a>
 <ul>
-<li><a href="#org374bceb">1.5.1. Lisp</a></li>
+<li><a href="#org91fb2ac">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org403179c">1.6. 关于算法</a>
+<li><a href="#orga4619fd">1.6. 关于算法</a>
 <ul>
-<li><a href="#org4e9154b">1.6.1. 关于随机</a></li>
+<li><a href="#orgc1e69ed">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org13520b9">1.7. 关于AI</a></li>
-<li><a href="#orgee0f0cb">1.8. 关于软件</a>
+<li><a href="#org9733c46">1.7. 关于AI</a></li>
+<li><a href="#org3f39bb5">1.8. 关于软件</a>
 <ul>
-<li><a href="#org5f2a1b0">1.8.1. SQLite</a></li>
+<li><a href="#org9bb7e65">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgd13c74c">1.9. 关于workflow</a></li>
+<li><a href="#org9b9d65d">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org8d4a648">2. 棒棒视频</a>
+<li><a href="#org41b207a">2. 棒棒视频</a>
 <ul>
-<li><a href="#org5477a53">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org90eff1f">2.2. 各种剧</a></li>
-<li><a href="#org0dd95f8">2.3. 电影</a></li>
+<li><a href="#org8269589">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org7a6a931">2.2. 各种剧</a></li>
+<li><a href="#orgad97b99">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org51a08ed">3. 快乐游戏</a></li>
-<li><a href="#orgc23d146">4. 宝藏博主</a></li>
-<li><a href="#orgb24d68b">5. 有意思的</a>
+<li><a href="#org413fa49">3. 快乐游戏</a></li>
+<li><a href="#orgbb3bf21">4. 宝藏博主</a></li>
+<li><a href="#org7341b15">5. 有意思的</a>
 <ul>
-<li><a href="#orga4b043d">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgb2e82a0">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org8dd2468">6. 我想玩的</a></li>
+<li><a href="#org8a56f27">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -81,8 +81,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org23d683f" class="outline-2">
-<h2 id="org23d683f"><span class="section-number-2">1.</span> <a href="#org23d683f">妙妙文章</a></h2>
+<div id="outline-container-orgece9a2e" class="outline-2">
+<h2 id="orgece9a2e"><span class="section-number-2">1.</span> <a href="#orgece9a2e">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -441,7 +441,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="org69e7f9e">
+<figure id="org2cab614">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -505,8 +505,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgca47d3a" class="outline-3">
-<h3 id="orgca47d3a"><span class="section-number-3">1.1.</span> <a href="#orgca47d3a">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org9e514c6" class="outline-3">
+<h3 id="org9e514c6"><span class="section-number-3">1.1.</span> <a href="#org9e514c6">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -536,8 +536,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org42ef642" class="outline-3">
-<h3 id="org42ef642"><span class="section-number-3">1.2.</span> <a href="#org42ef642">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org54066c4" class="outline-3">
+<h3 id="org54066c4"><span class="section-number-3">1.2.</span> <a href="#org54066c4">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -571,8 +571,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org2dc7d1d" class="outline-3">
-<h3 id="org2dc7d1d"><span class="section-number-3">1.3.</span> <a href="#org2dc7d1d">关于编辑器</a></h3>
+<div id="outline-container-org90432d1" class="outline-3">
+<h3 id="org90432d1"><span class="section-number-3">1.3.</span> <a href="#org90432d1">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -588,8 +588,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgbe1765f" class="outline-3">
-<h3 id="orgbe1765f"><span class="section-number-3">1.4.</span> <a href="#orgbe1765f">关于代码</a></h3>
+<div id="outline-container-org13f8bc9" class="outline-3">
+<h3 id="org13f8bc9"><span class="section-number-3">1.4.</span> <a href="#org13f8bc9">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org8102dd6" class="outline-3">
-<h3 id="org8102dd6"><span class="section-number-3">1.5.</span> <a href="#org8102dd6">关于CPU</a></h3>
+<div id="outline-container-org368a5c9" class="outline-3">
+<h3 id="org368a5c9"><span class="section-number-3">1.5.</span> <a href="#org368a5c9">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -630,8 +630,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-org374bceb" class="outline-4">
-<h4 id="org374bceb"><span class="section-number-4">1.5.1.</span> <a href="#org374bceb">Lisp</a></h4>
+<div id="outline-container-org91fb2ac" class="outline-4">
+<h4 id="org91fb2ac"><span class="section-number-4">1.5.1.</span> <a href="#org91fb2ac">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -654,8 +654,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org403179c" class="outline-3">
-<h3 id="org403179c"><span class="section-number-3">1.6.</span> <a href="#org403179c">关于算法</a></h3>
+<div id="outline-container-orga4619fd" class="outline-3">
+<h3 id="orga4619fd"><span class="section-number-3">1.6.</span> <a href="#orga4619fd">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -674,8 +674,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org4e9154b" class="outline-4">
-<h4 id="org4e9154b"><span class="section-number-4">1.6.1.</span> <a href="#org4e9154b">关于随机</a></h4>
+<div id="outline-container-orgc1e69ed" class="outline-4">
+<h4 id="orgc1e69ed"><span class="section-number-4">1.6.1.</span> <a href="#orgc1e69ed">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -689,8 +689,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org13520b9" class="outline-3">
-<h3 id="org13520b9"><span class="section-number-3">1.7.</span> <a href="#org13520b9">关于AI</a></h3>
+<div id="outline-container-org9733c46" class="outline-3">
+<h3 id="org9733c46"><span class="section-number-3">1.7.</span> <a href="#org9733c46">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -700,8 +700,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgee0f0cb" class="outline-3">
-<h3 id="orgee0f0cb"><span class="section-number-3">1.8.</span> <a href="#orgee0f0cb">关于软件</a></h3>
+<div id="outline-container-org3f39bb5" class="outline-3">
+<h3 id="org3f39bb5"><span class="section-number-3">1.8.</span> <a href="#org3f39bb5">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -712,8 +712,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org5f2a1b0" class="outline-4">
-<h4 id="org5f2a1b0"><span class="section-number-4">1.8.1.</span> <a href="#org5f2a1b0">SQLite</a></h4>
+<div id="outline-container-org9bb7e65" class="outline-4">
+<h4 id="org9bb7e65"><span class="section-number-4">1.8.1.</span> <a href="#org9bb7e65">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -727,8 +727,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd13c74c" class="outline-3">
-<h3 id="orgd13c74c"><span class="section-number-3">1.9.</span> <a href="#orgd13c74c">关于workflow</a></h3>
+<div id="outline-container-org9b9d65d" class="outline-3">
+<h3 id="org9b9d65d"><span class="section-number-3">1.9.</span> <a href="#org9b9d65d">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -738,8 +738,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org8d4a648" class="outline-2">
-<h2 id="org8d4a648"><span class="section-number-2">2.</span> <a href="#org8d4a648">棒棒视频</a></h2>
+<div id="outline-container-org41b207a" class="outline-2">
+<h2 id="org41b207a"><span class="section-number-2">2.</span> <a href="#org41b207a">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -809,8 +809,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org5477a53" class="outline-3">
-<h3 id="org5477a53"><span class="section-number-3">2.1.</span> <a href="#org5477a53">Veritasium 真理元素</a></h3>
+<div id="outline-container-org8269589" class="outline-3">
+<h3 id="org8269589"><span class="section-number-3">2.1.</span> <a href="#org8269589">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -835,8 +835,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org90eff1f" class="outline-3">
-<h3 id="org90eff1f"><span class="section-number-3">2.2.</span> <a href="#org90eff1f">各种剧</a></h3>
+<div id="outline-container-org7a6a931" class="outline-3">
+<h3 id="org7a6a931"><span class="section-number-3">2.2.</span> <a href="#org7a6a931">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -857,8 +857,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0dd95f8" class="outline-3">
-<h3 id="org0dd95f8"><span class="section-number-3">2.3.</span> <a href="#org0dd95f8">电影</a></h3>
+<div id="outline-container-orgad97b99" class="outline-3">
+<h3 id="orgad97b99"><span class="section-number-3">2.3.</span> <a href="#orgad97b99">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org51a08ed" class="outline-2">
-<h2 id="org51a08ed"><span class="section-number-2">3.</span> <a href="#org51a08ed">快乐游戏</a></h2>
+<div id="outline-container-org413fa49" class="outline-2">
+<h2 id="org413fa49"><span class="section-number-2">3.</span> <a href="#org413fa49">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc23d146" class="outline-2">
-<h2 id="orgc23d146"><span class="section-number-2">4.</span> <a href="#orgc23d146">宝藏博主</a></h2>
+<div id="outline-container-orgbb3bf21" class="outline-2">
+<h2 id="orgbb3bf21"><span class="section-number-2">4.</span> <a href="#orgbb3bf21">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -926,15 +926,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="orgcfd867d">
+<figure id="org1a977f2">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-orgb24d68b" class="outline-2">
-<h2 id="orgb24d68b"><span class="section-number-2">5.</span> <a href="#orgb24d68b">有意思的</a></h2>
+<div id="outline-container-org7341b15" class="outline-2">
+<h2 id="org7341b15"><span class="section-number-2">5.</span> <a href="#org7341b15">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -958,8 +958,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga4b043d" class="outline-3">
-<h3 id="orga4b043d"><span class="section-number-3">5.1.</span> <a href="#orga4b043d">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgb2e82a0" class="outline-3">
+<h3 id="orgb2e82a0"><span class="section-number-3">5.1.</span> <a href="#orgb2e82a0">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -971,8 +971,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org8dd2468" class="outline-2">
-<h2 id="org8dd2468"><span class="section-number-2">6.</span> <a href="#org8dd2468">我想玩的</a></h2>
+<div id="outline-container-org8a56f27" class="outline-2">
+<h2 id="org8a56f27"><span class="section-number-2">6.</span> <a href="#org8a56f27">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -995,7 +995,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-30 19:15</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-01 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-02 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
