--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-01 02:58 -->
+<!-- 2022-10-02 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -34,19 +34,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org11c8209">1. 暑假</a>
+<li><a href="#org1ab9273">1. 暑假</a>
 <ul>
-<li><a href="#org0eb2f82">1.1. 夏令营</a></li>
+<li><a href="#org6012d1a">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org66a3d87">2. 打工</a></li>
-<li><a href="#org5eca280">3. 我的928</a>
+<li><a href="#org20af251">2. 打工</a></li>
+<li><a href="#org8c31564">3. 我的928</a>
 <ul>
-<li><a href="#org20b1f01">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org2569ffb">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org3b3e385">4. 他们的928</a></li>
-<li><a href="#org9922fd9">5. 总结</a></li>
+<li><a href="#orgba1ce63">4. 他们的928</a></li>
+<li><a href="#org80f69b7">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -56,7 +56,7 @@
 </p>
 
 
-<figure id="org1175113">
+<figure id="orgd2d596f">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -79,8 +79,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org11c8209" class="outline-2">
-<h2 id="org11c8209"><span class="section-number-2">1.</span> <a href="#org11c8209">暑假</a></h2>
+<div id="outline-container-org1ab9273" class="outline-2">
+<h2 id="org1ab9273"><span class="section-number-2">1.</span> <a href="#org1ab9273">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -104,8 +104,8 @@
 </p>
 </div>
 
-<div id="outline-container-org0eb2f82" class="outline-3">
-<h3 id="org0eb2f82"><span class="section-number-3">1.1.</span> <a href="#org0eb2f82">夏令营</a></h3>
+<div id="outline-container-org6012d1a" class="outline-3">
+<h3 id="org6012d1a"><span class="section-number-3">1.1.</span> <a href="#org6012d1a">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -147,8 +147,8 @@
 </div>
 </div>
 
-<div id="outline-container-org66a3d87" class="outline-2">
-<h2 id="org66a3d87"><span class="section-number-2">2.</span> <a href="#org66a3d87">打工</a></h2>
+<div id="outline-container-org20af251" class="outline-2">
+<h2 id="org20af251"><span class="section-number-2">2.</span> <a href="#org20af251">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -162,8 +162,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org5eca280" class="outline-2">
-<h2 id="org5eca280"><span class="section-number-2">3.</span> <a href="#org5eca280">我的928</a></h2>
+<div id="outline-container-org8c31564" class="outline-2">
+<h2 id="org8c31564"><span class="section-number-2">3.</span> <a href="#org8c31564">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -179,8 +179,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org20b1f01" class="outline-3">
-<h3 id="org20b1f01"><span class="section-number-3">3.1.</span> <a href="#org20b1f01">928演唱会(bushi</a></h3>
+<div id="outline-container-org2569ffb" class="outline-3">
+<h3 id="org2569ffb"><span class="section-number-3">3.1.</span> <a href="#org2569ffb">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -188,7 +188,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgf71d21f">
+<figure id="org6431036">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org1500d47">
+<figure id="org07931ac">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -213,8 +213,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org3b3e385" class="outline-2">
-<h2 id="org3b3e385"><span class="section-number-2">4.</span> <a href="#org3b3e385">他们的928</a></h2>
+<div id="outline-container-orgba1ce63" class="outline-2">
+<h2 id="orgba1ce63"><span class="section-number-2">4.</span> <a href="#orgba1ce63">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -234,8 +234,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org9922fd9" class="outline-2">
-<h2 id="org9922fd9"><span class="section-number-2">5.</span> <a href="#org9922fd9">总结</a></h2>
+<div id="outline-container-org80f69b7" class="outline-2">
+<h2 id="org80f69b7"><span class="section-number-2">5.</span> <a href="#org80f69b7">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -250,7 +250,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-01 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-02 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
